k8s/nodejs-application/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: sandbox
spec:
  type: ClusterIP
  selector:
    app: nodejs-app
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 8080
