k8s/nodejs-application/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: domain-local-ingress
  namespace: sandbox
  annotations:
    cert-manager.io/issuer: "self-signed-issuer"
spec:
  tls:
  - hosts:
    - domain.local
    secretName: domain-local-cert-tls
  rules:
  - host: domain.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs-service
            port:
              number: 80
